[package]
name = "staged-access-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
dashmap = "6"
tower-http = { version = "0.5", features = ["cors"] }
